# S.O-TPs

TP1/: Ej1.ps1  Ej2.ps1  Ej3.ps1  Ej3s.ps1  Ej4.ps1  Ej4s.ps1  Ej5.ps1  Ej6.ps1  Ejercicio1.ps1  ejercicio4.ps1
TP1/Ejercicio_1/: Ej1.ps1
TP1/Ejercicio_2/: Ej2.ps1
TP1/Ejercicio_3/: Ej3.ps1  gauss.txt  solucion.txt
TP1/Ejercicio_4/: Ej4.ps1
TP1/Ejercicio_5/: Ej5.ps1
TP1/Ejercicio_6/: Ej6.ps1
TP2/Ejercicio_1/: script1.sh  script2.sh
TP2/Ejercicio_2/: ejercicio2.sh  reporte.awk
TP2/Ejercicio_3/: ejercicio3.sh
TP2/Ejercicio_4/: ejercicio4.sh  parametro_e.awk  parametro_l.awk
TP2/Ejercicio_5/: ejercicio5.sh
TP2/Ejercicio_6/: ej6_cliente.sh  ej6_demonio.sh
TP3/Ejercicio_1/: README  conclusiones.txt
TP3/Ejercicio_1/src/: .CMakeLists.txt.swp  CMakeLists.txt  funciones.cpp  funciones.h  proceso_escritura.cpp  proceso_lectura.cpp
TP3/Ejercicio_2/: Cliente.c
TP3/Ejercicio_2/CasoArchivo/: Servidor.c
TP3/Ejercicio_3/: nnd1.txt
